   + esValues1/2 : optional ES value data
   + getES*() : returns esValues* entry if available; throws exception otherwise
   + computeES() : inits ES values based on VRNA routines
 * VrnaHandler :
   * getModel() :
     * uses now vrna_md_copy() (VRNA >= 2.3.0) for model copying
 * CommandLineParsing :
   * energy : 
     - 'F' : replaced by 'V'
     + 'V' : VRNA based computation

170202 Martin Mann :
 * CommandLineParsing :
   * outMaxE maximum now 999 (was 0)
   - PredictionMode : replaced by char-based setup
   * seedMaxUPq -> seedQMaxUP
   * seedMaxUPt -> seedTMaxUP
   * seedRangeq -> seedQRange
   * seedRanget -> seedTRange
   + pred + validator : setup of prediction target (mfe-si, maxprob-si, ...)
   * predMode : 
     * char-based setup
     - max-prob mode (now selected via --pred=P)
   * outOverlap : char-based setup
   * outAccFileq -> outQAccFile
   * outAccFilet -> outTAccFile
   * outPuFileq -> outQPuFile
   * outPuFilet -> outTPuFile
   * get*Accessibility() :
     * computeES setup now via pred.val
   * getPredictor() :
     + support for different prediction targets via pred.val switch
 * OutputConstraint :
   * constructor() :
     - (maxE < 0) check removed
 + intarna_config.h.in : header containing package version and configure 
   information
 * configure.ac : 
   + generate intarna_config.h
   + AC_SUBST(INTARNA_MULITHREADING)
 * AccessibilityDisabled :
   * getES() : 
     - no error is thrown anymore
 * perl/*.pl : adaptions to CLI changes

170201 Martin Mann :
 * CommandLineParsing :
   * max sequence number now 99999
   * setup of threads parameter only if INTARNA_MULITHREADING
 * configure.ac : 
   + --disabled-multithreading : sets INTARNA_MULITHREADING to 0, otherwise 1
 * enclose all OMP stuff with INTARNA_MULITHREADING preprocessor checks
 * AccessibilityVrna :
   * computeES() : bugfix
 
170131 Martin Mann :
 * CommandLineParsing :
   + opts_cmdline_short : short option list for abbreviated help output
   * constructor() :